--- a/Portfolio project/index.html
+++ b/Portfolio project/index.html
@@ -1,4 +1,4 @@
-<!COCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -91,6 +91,12 @@
         </div>
     </div>	
 </div>
+
+	<!-- Resume section -->
+	<div class="resume">
+		<h3>My Resume</h3>
+		<img src="file:///C:/Users/Amu/Desktop/CodSoft-Intern/Portfolio%20project/img/resume-try.png" style="max-width: 60%;" alt="Resume Image">
+
 
 	<!-- Socials section start -->
 	<section class="socials">
