--- a/Portfolio project/index.html
+++ b/Portfolio project/index.html
@@ -31,7 +31,7 @@
 		<div class="content">
 			<h4>Hello, my name is</h4>
 			<h1>Amukelani Mabirimise</h1>
-			<h3>A web alchemist crafting dynamic and visually stunning digital experiences.</h3>
+			<h3>A web alchemist crafting dynamic and visually stunning digital experiences.</h3>			
 			<div class="newslatter">
 				<form>
 					<input type="email" name="email" id="mail" placeholder="Enter Your Email">
@@ -39,6 +39,9 @@
 				</form>
 			</div>
 		</div>
+		<div style="position: relative; left: 1110px; margin-top: 80px;">
+				<img src="img/try1.png" style="width: 430px; height: 600px; border-radius: 12px;">
+			  </div>
 	</div>
 	
 	<!----About section start---->
@@ -91,6 +94,35 @@
         </div>
     </div>	
 </div>
+	<!-- Projects -->
+	<div class="projects">
+		<h3>Projects That I Bult</h3>
+    		<div class="places box">
+        		<h2>Landing Page</h2>
+			<a href="https://github.com/amuMabirimise/CodSoft-Intern/tree/main/real%20landing%20page" target="_blank">GitHub Repository - Landing Page</a>
+        		<img src="img/landing.png" style="width: 500px; height: 400px; border-radius: 12px;">
+    		</div>
+    		<div class="places box">
+        		<h2>Calculator</h2>
+			<a href="https://github.com/amuMabirimise/CodSoft-Intern/tree/main/calculator" target="_blank">GitHub Repository - Calculator</a>
+       			<img src="img/calculator.png" style="width: 500px; height: 400px; border-radius: 12px;">
+    		</div>
+	</div>
+	<!-- Projects end her -->
+
+
+		<div class="certificates">
+		<h3>Certificates</h3>
+		 <div class="places box">
+				<h2>CodSOFT-Internship</h2>
+				<img src="img/Codsoft.png" style="width: 500px; height: 700px; border-radius: 12px;">
+			</div>
+			<div class="places box">
+				<h2>ALX Bootcamp Transcript</h2>
+				<img src="img/transcript.png" style="width: 500px; height: 700px; border-radius: 12px;">				
+			</div>
+	</div>
+
 
 	<!-- Resume section -->
 	<div class="resume">
