--- a/real landing page/index.html
+++ b/real landing page/index.html
@@ -16,11 +16,10 @@
 		<div class="menu">
 			<ul>
 				<li><a href="#">Home</a></li>
-				<li><a href="service.html">Services</a></li>
+				<li><a href="#">Services</a></li>
 				<li><a href="#">Places</a></li>
 				<li><a href="#">Discounts</a></li>
 				<li><a href="#">Contacts</a></li>
-				<li><a href="#">Booking</a></li>
 				<li><a href="review.html">Review</a><li>
 			</ul>
 		</div>
@@ -44,22 +43,22 @@
 
 		<div class="tours">
 			<div class="places">
-				<h2>Cape Town</h2>
-				<img src="img/capetown.jpg" style="width: 300px; height: 250px; border-radius: 12px;">
+				<h2>Kyoto</h2>
+				<img src="img/Kyoto.jpg" style="width: 300px; height: 400px; border-radius: 12px;">
 				<br>
 				<br>
 				<a href="#">Book Now 15% OFF</a>
 			</div>
 			<div class="places">
-				<h2>London</h2>
-				<img src="img/london.jpg" style="width: 300px; height: 250px; border-radius: 12px;">
+				<h2>Santorini</h2>
+				<img src="img/santorini.jpg" style="width: 300px; height: 400px; border-radius: 12px;">
 				<br>
 				<br>
-				<a href="#">Book Now 20% OFF</a>
+				<a href="#">Book Now 25% OFF</a>
 			</div>
 			<div class="places">
-				<h2>Thailand</h2>
-				<img src="img/thailand.jpg" style="width: 300px; height: 250px; border-radius: 12px;">
+				<h2>Sydney</h2>
+				<img src="img/sydne.jpg" style="width: 300px; height: 400px; border-radius: 12px;">
 				<br>
 				<br>
 				<a href="#">Book Now 25% OFF</a>
